force-app/main/default/objects/BB_Capability__c/BB_Capability__c.object-meta.xml
<CustomObject>
    <description>A Blackbaud capability mapped to Salesforce alignment, seeded from the blackbaud-tooling site's capabilities.js. Grounds the Rationalization Agent.</description>
    <label>BB Capability</label>
    <pluralLabel>BB Capabilities</pluralLabel>
    <nameField>
        <label>Capability Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>