force-app/main/default/objects/BB_Capability__c/fields/Alignment__c.field-meta.xml
<CustomField>
    <fullName>Alignment__c</fullName>
    <description>The 6-way Salesforce alignment placement (preliminary, for discussion).</description>
    <label>Alignment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Native</fullName><default>false</default><label>Native</label></value>
            <value><fullName>Integrates</fullName><default>false</default><label>Integrates</label></value>
            <value><fullName>Data 360</fullName><default>false</default><label>Data 360</label></value>
            <value><fullName>Partial</fullName><default>false</default><label>Partial</label></value>
            <value><fullName>Gap</fullName><default>false</default><label>Gap</label></value>
            <value><fullName>Discuss</fullName><default>false</default><label>Discuss</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>