force-app/main/default/objects/BB_Capability__c/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <description>Capability domain (e.g. Revenue Intelligence).</description>
    <label>Domain</label>
    <length>120</length>
    <type>Text</type>
</CustomField>