force-app/main/default/objects/BB_Capability__c/fields/Draft_Note__c.field-meta.xml
<CustomField>
    <fullName>Draft_Note__c</fullName>
    <description>Christa's draft analysis note (preliminary, not validated).</description>
    <label>Draft Note</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>