force-app/main/default/objects/BB_Capability__c/fields/Entitlement_Status__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Status__c</fullName>
    <description>Derived entitlement status (Licensed / Licensed-expiring / Separate / Not licensed / n-a).</description>
    <label>Entitlement Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>