force-app/main/default/objects/BB_Capability__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <externalId>true</externalId>
    <description>Stable id from capabilities.js (e.g. "forecasting"); upsert key for the seed script.</description>
    <label>External Id</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>