force-app/main/default/objects/BB_Capability__c/fields/Primary_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Primary_Entitlement__c</fullName>
    <description>The owned Salesforce entitlement covering this capability.</description>
    <label>Primary Entitlement</label>
    <referenceTo>BB_Entitlement__c</referenceTo>
    <relationshipLabel>Capabilities</relationshipLabel>
    <relationshipName>Capabilities</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>