force-app/main/default/objects/BB_Capability__c/fields/Primary_Users__c.field-meta.xml
<CustomField>
    <fullName>Primary_Users__c</fullName>
    <description>Team or function that uses this capability.</description>
    <label>Primary Users</label>
    <length>255</length>
    <type>Text</type>
</CustomField>