force-app/main/default/objects/BB_Capability__c/fields/Retire_Candidates__c.field-meta.xml
<CustomField>
    <fullName>Retire_Candidates__c</fullName>
    <description>Third-party tools this owned capability could replace.</description>
    <label>Retire Candidates</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>