force-app/main/default/objects/BB_Capability__c/fields/SE_Review__c.field-meta.xml
<CustomField>
    <fullName>SE_Review__c</fullName>
    <description>Salesforce SE review and nuance; primary grounding text for the agent.</description>
    <label>SE Review</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>