force-app/main/default/objects/BB_Capability__c/fields/SF_Products__c.field-meta.xml
<CustomField>
    <fullName>SF_Products__c</fullName>
    <description>Salesforce products that deliver this capability.</description>
    <label>Salesforce Products</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>