force-app/main/default/objects/BB_Capability__c/fields/Value_Stream__c.field-meta.xml
<CustomField>
    <fullName>Value_Stream__c</fullName>
    <description>Which value stream this capability sits in.</description>
    <label>Value Stream</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>A2R</fullName><default>false</default><label>Awareness to Revenue (A2R)</label></value>
            <value><fullName>I2R</fullName><default>false</default><label>Implement to Renew (I2R)</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>